--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@ibma/aat": "https://able.ibm.com/tools/dist/ibma-aat-2.0.6.tgz",
+    "all-contributors-cli": "^6.19.0",
     "axe-core": "^3.3.2",
     "babel-jest": "^26.0.1",
     "cross-env": "^5.2.0",
