--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.23.0-rc.0",
+  "version": "10.23.0",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
@@ -79,10 +79,10 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
-    "@carbon/elements": "^10.22.0-rc.0",
-    "@carbon/icons-handlebars": "^10.20.0-rc.0",
-    "@carbon/icons-react": "^10.20.0-rc.0",
-    "@carbon/test-utils": "^10.11.0",
+    "@carbon/elements": "^10.22.0",
+    "@carbon/icons-handlebars": "^10.20.0",
+    "@carbon/icons-react": "^10.20.0",
+    "@carbon/test-utils": "^10.12.0",
     "@frctl/fractal": "^1.1.0",
     "adaro": "1.0.4",
     "autoprefixer": "^9.7.4",
