--- a/packages/icons-handlebars/package.json
+++ b/packages/icons-handlebars/package.json
@@ -4,7 +4,11 @@
   "version": "10.21.0",
   "license": "Apache-2.0",
   "main": "index.js",
-  "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/icons-handlebars",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carbon-design-system/carbon.git",
+    "directory": "packages/icons-handlebars"
+  },
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
   "keywords": [
     "ibm",
