--- a/packages/sketch/package.json
+++ b/packages/sketch/package.json
@@ -4,7 +4,11 @@
   "description": "Tooling for generating a sketch plugin to bring code to design",
   "version": "10.22.0",
   "license": "Apache-2.0",
-  "repository": "https://github.com/carbon-design-system/carbon/tree/master/packages/sketch",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carbon-design-system/carbon.git",
+    "directory": "packages/sketch"
+  },
   "bugs": "https://github.com/carbon-design-system/carbon/issues",
   "keywords": [
     "ibm",
