--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -33,11 +33,15 @@
     "clean": "rimraf es lib umd"
   },
   "dependencies": {
-    "@carbon/icon-helpers": "^10.9.0"
+    "@carbon/icon-helpers": "^10.9.0",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@carbon/icon-build-helpers": "^0.11.0",
     "@carbon/icons": "^10.21.0"
+  },
+  "peerDependencies": {
+    "react": ">=16"
   },
   "sideEffects": false
 }
