--- a/packages/icon-build-helpers/package.json
+++ b/packages/icon-build-helpers/package.json
@@ -2,7 +2,7 @@
   "name": "@carbon/icon-build-helpers",
   "private": true,
   "description": "Build helpers for the Carbon Design System icon library",
-  "version": "0.11.0",
+  "version": "0.12.0-rc.0",
   "license": "Apache-2.0",
   "main": "src/index.js",
   "repository": {
@@ -24,9 +24,9 @@
   "devDependencies": {
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
-    "@carbon/cli-reporter": "^10.3.0",
-    "@carbon/icon-helpers": "^10.9.0",
-    "browserslist-config-carbon": "^10.5.0",
+    "@carbon/cli-reporter": "^10.4.0-rc.0",
+    "@carbon/icon-helpers": "^10.10.0-rc.0",
+    "browserslist-config-carbon": "^10.6.0-rc.0",
     "change-case": "^4.1.1",
     "core-js": "^3.6.5",
     "fs-extra": "^8.1.0",
