--- a/packages/import-once/package.json
+++ b/packages/import-once/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/import-once",
   "description": "Sass helper for importing files only once. Used in the Carbon Design System",
-  "version": "10.3.0",
+  "version": "10.4.0-rc.0",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
