--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/layout",
   "description": "Layout helpers for digital and software products using the Carbon Design System",
-  "version": "10.14.0",
+  "version": "10.15.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -29,10 +29,10 @@
     "clean": "rimraf es lib umd scss/generated"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.9.0",
-    "@carbon/cli-reporter": "^10.3.0",
-    "@carbon/scss-generator": "^10.10.0",
-    "@carbon/test-utils": "^10.12.0",
+    "@carbon/bundler": "^10.10.0-rc.0",
+    "@carbon/cli-reporter": "^10.4.0-rc.0",
+    "@carbon/scss-generator": "^10.11.0-rc.0",
+    "@carbon/test-utils": "^10.13.0-rc.0",
     "core-js": "^3.6.5",
     "rimraf": "^3.0.0"
   },
