--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/themes",
   "description": "Themes for applying color in the Carbon Design System",
-  "version": "10.23.0",
+  "version": "10.24.0-rc.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -28,15 +28,15 @@
     "build": "yarn clean && bundler bundle src/index.js --name CarbonThemes && node tasks/build.js && bundler check \"scss/*.scss\" && bundler sassdoc \"scss/**/*.scss\""
   },
   "dependencies": {
-    "@carbon/colors": "^10.16.0",
-    "@carbon/layout": "^10.14.0",
-    "@carbon/type": "^10.17.0",
+    "@carbon/colors": "^10.17.0-rc.0",
+    "@carbon/layout": "^10.15.0-rc.0",
+    "@carbon/type": "^10.18.0-rc.0",
     "color": "^3.1.2"
   },
   "devDependencies": {
-    "@carbon/cli-reporter": "^10.3.0",
-    "@carbon/scss-generator": "^10.10.0",
-    "@carbon/test-utils": "^10.12.0",
+    "@carbon/cli-reporter": "^10.4.0-rc.0",
+    "@carbon/scss-generator": "^10.11.0-rc.0",
+    "@carbon/test-utils": "^10.13.0-rc.0",
     "change-case": "^4.1.1",
     "core-js": "^3.6.5",
     "fs-extra": "^8.1.0",
