--- a/package.json
+++ b/package.json
@@ -46,27 +46,19 @@
     "@babel/runtime": "^7.10.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@ibma/aat": "https://able.ibm.com/tools/dist/ibma-aat-2.0.6.tgz",
     "@testing-library/dom": "^7.26.6",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "accessibility-checker": "^3.1.1",
     "all-contributors-cli": "^6.19.0",
-    "axe-core": "^3.3.2",
-    "babel-jest": "^26.0.1",
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
     "doctoc": "^1.4.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.3.5",
     "eslint": "^6.8.0",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.4",
     "husky": "^4.0.10",
     "jest": "^26.0.1",
-    "jest-circus": "^26.0.1",
     "jest-junit": "^10.0.0",
     "lerna": "^3.20.2",
     "lint-staged": "^9.5.0",
@@ -148,63 +140,16 @@
     ]
   },
   "jest": {
+    "preset": "jest-config-carbon",
     "collectCoverageFrom": [
       "packages/**/src/**/*.js",
       "!packages/{bundler,cli,components,sketch}/**",
       "!packages/**/{examples,stories}/**",
       "!**/*-story.js"
     ],
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "node"
-    ],
     "reporters": [
       "default",
       "jest-junit"
-    ],
-    "setupFiles": [
-      "./tasks/jest/setup.js"
-    ],
-    "setupFilesAfterEnv": [
-      "./tasks/jest/setupAfterEnv.js"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "testMatch": [
-      "<rootDir>/**/__tests__/**/*.js?(x)",
-      "<rootDir>/**/*.(spec|test).js?(x)",
-      "<rootDir>/**/*-(spec|test).js?(x)"
-    ],
-    "transform": {
-      "^.+\\.(js|jsx)$": "./tasks/jest/jsTransform.js",
-      "^.+\\.css$": "./tasks/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "./tasks/jest/fileTransform.js"
-    },
-    "testRunner": "jest-circus/runner",
-    "testPathIgnorePatterns": [
-      "/cjs/",
-      "/dist/",
-      "/es/",
-      "/lib/",
-      "/build/",
-      "e2e",
-      "examples",
-      "/umd/"
-    ],
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "watchPathIgnorePatterns": [
-      "/cjs/",
-      "/dist/",
-      "/es/",
-      "/examples/",
-      "/lib/",
-      "/storybook/",
-      "/results/"
     ]
-  },
-  "dependencies": {}
+  }
 }
