--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "carbon-components",
   "description": "The Carbon Design System is IBM’s open-source design system for products and experiences.",
-  "version": "10.25.0-rc.2",
+  "version": "10.25.0",
   "license": "Apache-2.0",
   "main": "umd/index.js",
   "module": "es/index.js",
@@ -83,10 +83,10 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
     "@babel/runtime": "^7.10.0",
-    "@carbon/elements": "^10.24.0-rc.0",
-    "@carbon/icons-handlebars": "^10.22.0-rc.0",
-    "@carbon/icons-react": "^10.22.0-rc.0",
-    "@carbon/test-utils": "^10.13.0-rc.0",
+    "@carbon/elements": "^10.24.0",
+    "@carbon/icons-handlebars": "^10.22.0",
+    "@carbon/icons-react": "^10.22.0",
+    "@carbon/test-utils": "^10.13.0",
     "@frctl/fractal": "^1.1.0",
     "adaro": "1.0.4",
     "autoprefixer": "^9.7.4",
@@ -97,7 +97,7 @@
     "babel-plugin-rewire": "^1.1.0",
     "bluebird": "~3.1.1",
     "browser-sync": "^2.26.3",
-    "browserslist-config-carbon": "^10.6.0-rc.0",
+    "browserslist-config-carbon": "^10.6.0",
     "carbon-components": "^9.0.0",
     "carbon-components-react": "^6.0.0",
     "chokidar": "^2.0.0",
