--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/elements",
   "description": "A collection of design elements in code for the IBM Design Language",
-  "version": "10.24.0-rc.0",
+  "version": "10.24.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -35,17 +35,17 @@
     "clean": "rimraf es lib umd && node tasks/clean.js"
   },
   "dependencies": {
-    "@carbon/colors": "^10.17.0-rc.0",
-    "@carbon/grid": "^10.17.0-rc.0",
-    "@carbon/icons": "^10.22.0-rc.0",
-    "@carbon/import-once": "^10.4.0-rc.0",
-    "@carbon/layout": "^10.15.0-rc.0",
-    "@carbon/motion": "^10.10.0-rc.0",
-    "@carbon/themes": "^10.24.0-rc.0",
-    "@carbon/type": "^10.18.0-rc.0"
+    "@carbon/colors": "^10.17.0",
+    "@carbon/grid": "^10.17.0",
+    "@carbon/icons": "^10.22.0",
+    "@carbon/import-once": "^10.4.0",
+    "@carbon/layout": "^10.15.0",
+    "@carbon/motion": "^10.10.0",
+    "@carbon/themes": "^10.24.0",
+    "@carbon/type": "^10.18.0"
   },
   "devDependencies": {
-    "@carbon/bundler": "^10.10.0-rc.0",
+    "@carbon/bundler": "^10.10.0",
     "fs-extra": "^8.1.0",
     "klaw-sync": "^6.0.0",
     "replace-in-file": "^3.4.2",
