--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@carbon/react-hooks",
   "private": true,
-  "version": "10.19.0-rc.3",
+  "version": "10.19.0",
   "license": "Apache-2.0",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -34,7 +34,7 @@
     "@babel/core": "^7.10.0",
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.10.0",
-    "@carbon/test-utils": "^10.13.0-rc.0",
+    "@carbon/test-utils": "^10.13.0",
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
@@ -42,8 +42,8 @@
     "@storybook/react": "^5.3.19",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.1.0",
-    "browserslist-config-carbon": "^10.6.0-rc.0",
-    "carbon-components": "^10.25.0-rc.2",
+    "browserslist-config-carbon": "^10.6.0",
+    "carbon-components": "^10.25.0",
     "css-loader": "^3.4.2",
     "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
