feat(filterable-multiselect): add onMenuChange event (#7370)
* feat(filterable-multiselect): add onMenuChange event

* feat(filterable-multiselect): fix onMenuChange event

* Update packages/react/src/components/MultiSelect/FilterableMultiSelect.js

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

Co-authored-by: emyarod <emyarod@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -628,6 +628,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "munkurious",
+      "name": "Boston Cartwright",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/2187109?v=4",
+      "profile": "https://github.com/munkurious",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "commitConvention": "none"
