--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -30,9 +30,11 @@
     "chalk": "^2.4.2",
     "child-process-promise": "^2.2.1",
     "clipboardy": "^2.1.0",
+    "enquirer": "^2.3.6",
     "fast-glob": "^3.2.2",
     "fs-extra": "^8.0.1",
     "inquirer": "^6.4.1",
+    "lodash.template": "^4.5.0",
     "prettier": "^2.1.0",
     "prettier-config-carbon": "^0.5.0",
     "progress-estimator": "^0.2.2",
