--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -72,10 +72,6 @@
     "@babel/preset-react": "^7.10.0",
     "@carbon/test-utils": "^10.13.0",
     "@percy/storybook": "^3.3.1",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-docs": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-notes": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addons": "^5.3.19",
@@ -120,6 +116,7 @@
     "rollup-plugin-terser": "^4.0.0",
     "rtlcss": "^2.4.0",
     "sass-loader": "^8.0.2",
+    "storybook-preset-carbon": "^0.0.0",
     "storybook-readme": "^5.0.8",
     "string-replace-loader": "^2.1.0",
     "terser-webpack-plugin": "^2.3.2",
