--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Build project
         run: yarn build
       - name: Run Continuous Integration checks
-        command: |
+        run: |
           yarn ci-check
           yarn lerna run ci-check
