feat(pictograms): add two prague dancing house pictograms to cities (#7440)
* add two prague dancing house pictograms to cities

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -92,6 +92,8 @@ categories:
       - paris--notre-dame
       - paris--pompidou-center
       - prague--charles-bridge-tower
+      - prague--dancing-house--01
+      - prague--dancing-house--02
       #    - portland
       - raleigh-nc
       - rome
