feat(pictograms): add rock on pictogram to lifestyle (#7442)
* add rock on pictogram to lifestyle

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -451,6 +451,7 @@ categories:
       - flower--02
       - perfume
       - racetrack
+      - rock-on
       - scale
       - soft--ice--cream
       - sports
