four spss statistics pictograms added to cloud (#7443)
* four spss statistics pictograms added to cloud

* chore(pictograms): update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -137,6 +137,7 @@ categories:
       - cloud--strategy
       - cloud--tutorials
       - cloud--vmware
+      - condition--builder
       - cognos--analytics
       - construct
       - devops
@@ -144,6 +145,7 @@ categories:
       - docker
       - expand--horz
       - expand--vert
+      - filter--variable
       - free--trial
       - global--business--services
       - global--technology--services
@@ -158,7 +160,9 @@ categories:
       - mas
       - mqa
       - planning--analytics
+      - random--samples
       - saas--enablement
+      - select--range
       - single--sign-on
       - softlayer--enablement
   - name: Controls
