feat(pictograms): add two new NYC pictograms to cities (#7441)
* add two new nyc pictograms to cities

* chore(pictograms): update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -84,9 +84,11 @@ categories:
       - munich
       - nice
       - nyc--brooklyn
+      - nyc--chrysler-building
       - nyc--manhattan--01
       - nyc--manhattan--02
       - nyc--statue-of-liberty
+      - nyc--world-trade-center
       - paris--arc-de-triomphe
       - paris--louvre
       - paris--notre-dame
