--- a/config/storybook-preset-carbon/package.json
+++ b/config/storybook-preset-carbon/package.json
@@ -22,6 +22,10 @@
     "@storybook/addon-docs": "^5.3.19",
     "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
-    "@storybook/addon-storysource": "^5.3.19"
+    "@storybook/addon-notes": "^5.3.19",
+    "@storybook/addon-storysource": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/react": "^5.3.19",
+    "storybook-readme": "^5.0.8"
   }
 }
